fix blurring and add some style

--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,14 @@ li {
   list-style: none;
 }
 
+ul.pills li {
+  display: inline;
+  margin-right: 1rem;
+  .remove {
+    margin-left: 0.5rem;
+  }
+}
+
 ul.autocomplete li {
   cursor: pointer;
   &.considering {
